<resources>
    <string name="app_name">Cunny</string>
    <string name="title_home">Home</string>
    <string name="title_materials">Materials</string>
    <string name="title_favorite">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="searchbar_hint">Search Material</string>
    <string name="img_description">Image Description</string>
    <string name="enter_email">Please enter your E-mail.</string>
    <string name="invalid_email">Invalid E-Mail, please try again.</string>
    <string name="enter_password">Please enter your Password.</string>
    <string name="password_8digit">Password must be 8 characters.</string>
    <string name="continueBtn">Continue</string>
    <string name="practice">Aha, akhirnya kamu sampai juga! Kamu bisa scan buah apa saja pakai kamera atau gallery di bawah ini, nanti kita jelasin.</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
    </string>

    <string-array name="data_name">
        <item>AI Introduction</item>
        <item>CNN</item>
        <item>Supervised</item>
        <item>Dummy</item>
        <item>Dummy 2</item>
    </string-array>

    <string-array name="data_description">
        <item>AI is Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor.</item>
        <item>CNN is Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor.</item>
        <item>Supervised is Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor.</item>
        <item>Dummy is Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor.</item>
        <item>Dummy 2 is Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor.</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/image_placeholder</item>
        <item>@drawable/image_placeholder</item>
        <item>@drawable/image_placeholder</item>
        <item>@drawable/image_placeholder</item>
        <item>@drawable/image_placeholder</item>
    </integer-array>

    <string-array name="materiList">
        <item>
            Chapter 1 : Apa itu AI (Artificial Intelligence)?
            Chapter 2 : Apa itu Machine Learning (ML)?
            Chapter 3 : Apa itu Deep Learning (DL)?
            Chapter 4 : Hubungan Antara AI, ML, dan DL
            Chapter 5 : Kenapa AI, ML, dan DL Penting?
            Chapter 6 : Bagaimana Kamu Bisa Mulai?
        </item>
        <item>
            Chapter 1 : Apa itu Image Classification?
            Chapter 2 : Cara Kerja Image Classification
            Chapter 3 : Apa itu CNN (Convolutional Neural Network)?
            Chapter 4 : Langkah-langkah untuk Melakukan Image Classification
            Chapter 5 : Contoh Penerapan Image Classification
            Chapter 6 : Tantangan dalam Image Classification
            Kesimpulan
        </item>
        <item>
            Chapter 1 : Apa itu Data dalam Machine Learning?
            Chapter 2 : Apa itu Supervised Data?
            Chapter 3 : Apa itu Unsupervised Data?
            Chapter 4 : Perbedaan Supervised vs Unsupervised Data
            Chapter 5 : Hubungan Antara Keduanya
            Kesimpulan
        </item>
        <item>
            Chapter 1 : Tools untuk Pengembangan dan Kolaborasi
            Chapter 2 : Bahasa Pemrograman
            Chapter 3 : Framework dan Libraries Machine Learning
            Chapter 4 : Data Preprocessing Tools
            Chapter 5 : Tools untuk Visualisasi Data
            Chapter 6 : Model Deployment Tools
            Chapter 7 : Cloud Services
            Kesimpulan
        </item>
        <item>
            Chapter 1 : Coming Soon
            Chapter 2 : Coming Soon
            Chapter 3 : Coming Soon
            Chapter 4 : Coming Soon
            Chapter 5 : Coming Soon
            Chapter 6 : Coming Soon
            Chapter 7 : Coming Soon
            Kesimpulan
        </item>
    </string-array>

    <string-array name="duration">
        <item>Duration : 5 minute</item>
        <item>Duration : 5 minute</item>
        <item>Duration : 5 minute</item>
        <item>Duration : 5 minute</item>
        <item>Duration : 5 minute</item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login_page">Learn AI early!</string>
    <string name="message_login_page">Enter your login details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="cunny">CUNNY</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="enter_name">Please enter your Name.</string>
    <string name="name_cannot_be_empty">Name cannot be empty.</string>
    <string name="invalid_name">Invalid format.</string>
    <string name="title_signup_page">Complete Your Registration.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload_image">Upload Image</string>
    <string name="start_practice">Start Practice</string>
    <string name="your_web_client_id">577654610975-nr2stng7ic45ke6egh428qjd0d3001ro.apps.googleusercontent.com</string>
    <string name="title_signin_page">Welcome to Cunny!</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Settings</string>
    <string name="materials">Materials</string>
    <string name="all_cunny_materials">All of Cunny\'s Materials</string>
    <string name="Bookmark">Bookmarks</string>
    <string name="your_bookmark">All of your bookmarks are here.</string>
    <string name="your_bookmarks">Your Bookmarks</string>
    <string name="what_do_you_want_to_learn_today">What do you want to learn today?</string>
    <string name="hello_name">Hello, Eleonore</string>
    <string name="recent_materials">Recent Materials</string>
    <string name="Judul">title</string>
    <string name="registernnow">Register Now</string>
    <string name="loginnow">Login Now</string>
    <string name="prediction_text">Gambar diatas menunjukkan bagaimana komputer belajar mengenali hewan seperti kucing dan anjing menggunakan AI. Komputer dilatih dengan gambar-gambar berlabel, lalu diuji dengan gambar baru untuk menebak jenis hewannya. Proses ini mirip dengan anak kecil yang belajar mengenali hewan dari gambar. Begitu pula proses yang telah kamu lakukan sebelumnya.</string>
    <string name="Back">Back</string>
    <string name="hasil">Hasil :</string>
</resources>