<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"> <!-- Set splashFragment as start destination -->

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.cunny.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_materials"
        android:name="com.bangkit.cunny.ui.materials.MaterialFragment"
        android:label="@string/title_materials"
        tools:layout="@layout/fragment_material" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.bangkit.cunny.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

</navigation>
