<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment"> <!-- Set splashFragment as start destination -->

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.bangkit.cunny.ui.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_viewPagerFragment2"
            app:destination="@id/viewPagerFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_create_profile_fragment"
            app:destination="@id/registerFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/viewPagerFragment"
        android:name="com.bangkit.cunny.ui.onboarding.ViewPagerFragment"
        android:label="fragment_view_pager"
        tools:layout="@layout/fragment_view_pager">
        <action
            android:id="@+id/action_viewPagerFragment_to_create_profile_fragment"
            app:destination="@id/registerFragment"
            app:popUpTo="@id/viewPagerFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.cunny.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_materials"
        android:name="com.bangkit.cunny.ui.materials.MaterialFragment"
        android:label="@string/title_materials"
        tools:layout="@layout/fragment_material" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.bangkit.cunny.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.bangkit.cunny.ui.authen.RegisterFragment"
        android:label="fragment_create_profile"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.bangkit.cunny.ui.authen.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>
